<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="app_name">站长资源平台</string>
    <string name="action_settings">Settings</string>
    <string name="确定">确定</string>
    <string name="取消">取消</string>
    <string name="login">登录</string>
    <string name="account">手机号/用户名</string>
    <string name="password">密码</string>
    <string name="register">注册账号</string>
    <string name="forget">忘记密码</string>
    <string name="registered">注册</string>
    <string name="agree">注册代表同意《站长资源平台服务条款》</string>
    <string name="registeraccount">用户名</string>
    <string name="telephone">手机号码</string>
    <string name="verification">手机验证码</string>
    <string name="find">找回密码</string>
    <string name="tabhome">首页</string>
    <string name="tabbuy">流量购买</string>
    <string name="taborder">卖家求购</string>
    <string name="breakdown">故障申请</string>
    <string name="tabaccount">个人中心</string>
    <string name="消息">消息</string>
    <string name="短信提醒">短信提醒</string>
    <string name="本周消费">本周消费</string>
    <string name="总消费">总消费</string>
    <string name="充值余额">充值余额</string>
    <string name="产品服务">产品服务</string>
    <string name="大家都在买什么">大家都在买什么？</string>
    <string name="合作伙伴">合作伙伴</string>
    <string name="clause">站长资源平台服务条款</string>
    <string name="youku">优酷是中国领先的视频分享网站，由古永锵在2006年6月21日创立，优酷网以 “快者为王”为产品理念，注重用户体验，不断完善服务策略，其卓尔不群的“快速播放，快速发布，快速搜索”的产品特性，充分满足用户日益增长的多元化互动需求，使之成为中国视频网站中的领军势力。优酷网现已成为互联网拍客聚集的阵营。</string>

    <color name="white">#ffffff</color>
    <color name="pink">#f4f2fc</color>
    <color name="red">#f43772</color>
    <color name="orange">#ff722d</color>
    <color name="yellow">#fff7d8</color>
    <color name="black">#000000</color>
    <color name="gray">#66cfcfcf</color>
    <color name="green">#007500</color>
    <color name="dark_gray">#909090</color>
    <color name="transparent">#00000000</color>
    <color name="blue">#1874CD</color>
    <color name="light_blue">#06aaff</color>
    <color name="dark_blue">#3a424d</color>
    <color name="nattier_blue">#99c3e9</color>
    <color name="nattier_gray">#888888</color>

    <string name="title_activity_home_activity2">HomeActivity2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_breakdown">BreakdownActivity</string>

    <color name="griditems_bg">#ffe8ecef</color>
    <color name="commo_text_color">#ff333333</color>
    <color name="line">#ffd3dde6</color>

</resources>