<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/pink"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" >

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/account"
                        android:drawablePadding="10dp"
                        android:hint="@string/account"
                        android:inputType="text"
                        android:maxLength="20"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:singleLine="true"
                        android:textColor="@color/dark_gray"
                        android:textColorHint="#a9b7b7" >
                    </EditText>

                    <ImageView
                        android:id="@+id/imdelete1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/icon_guanbi"
                        android:visibility="invisible" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" >

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:singleLine="true"
                        android:textColor="@color/dark_gray"
                        android:textColorHint="#a9b7b7" />

                    <ImageView
                        android:id="@+id/imdelete2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/icon_guanbi"
                        android:visibility="invisible" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@drawable/verification"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="图片文字"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:singleLine="true"
                        android:textColor="@color/dark_gray"
                        android:textColorHint="#a9b7b7" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/gray" />

                    <ImageView
                        android:id="@+id/imsalt"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:background="@drawable/selector_btnwhite"
                        android:gravity="center"
                        android:padding="5dp"
                        android:src="@color/gray"
                        android:textColor="@color/dark_gray" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_mainbtn"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/tvforget"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/forget"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tvregister"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/register"
                    android:textColor="@color/red"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>