<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvconsumed1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="24sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tvconsumed2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="24sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tvleave"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/本周消费"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/总消费"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/充值余额"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvsearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_edittext"
        android:drawableRight="@drawable/search"
        android:gravity="center|left"
        android:hint="SEO综合查询"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radiorecommend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="精品推荐"
            android:textColor="@color/colorlist_whiteblue" />

        <RadioButton
            android:id="@+id/radioranking"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="-1dp"
            android:layout_marginRight="-1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:gravity="center"
            android:text="出售排行"
            android:textColor="@color/colorlist_whiteblue" />

        <RadioButton
            android:id="@+id/radioweb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:gravity="center"
            android:text="最新网址"
            android:textColor="@color/colorlist_whiteblue" />
    </RadioGroup>

</LinearLayout>