<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/tvback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_btnback"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/registered"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/pink" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/account"
                    android:drawablePadding="10dp"
                    android:hint="@string/registeraccount"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#a9b7b7" >
                </EditText>

                <ImageView
                    android:id="@+id/imdelete1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_guanbi"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear1"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv1"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/telephone"
                    android:drawablePadding="10dp"
                    android:hint="@string/telephone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#a9b7b7" />

                <ImageView
                    android:id="@+id/imdelete2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_guanbi"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear2"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv2"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#a9b7b7" />

                <ImageView
                    android:id="@+id/imdelete3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_guanbi"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear3"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv3"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:hint="确认密码"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#a9b7b7" />

                <ImageView
                    android:id="@+id/imdelete4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_guanbi"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear4"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv4"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/verification"
                    android:drawablePadding="10dp"
                    android:hint="图片验证码"
                    android:inputType="text"
                    android:maxLength="4"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#a9b7b7" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray" />

                <ImageView
                    android:id="@+id/imsalt"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/selector_btnwhite"
                    android:gravity="center"
                    android:src="@color/gray"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear5"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv5"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/telephone"
                    android:drawablePadding="10dp"
                    android:hint="@string/verification"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#a9b7b7" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tvverification"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_edittext"
                    android:gravity="center"
                    android:src="@drawable/icon_guanbi"
                    android:text="获取验证码"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linear6"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_checkbox_ok"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:id="@+id/tvregister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/checkBox"
                android:layout_margin="20dp"
                android:background="@drawable/selector_mainbtn"
                android:gravity="center"
                android:text="@string/registered"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvagree"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignBaseline="@+id/checkBox"
                android:layout_alignBottom="@+id/checkBox"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/checkBox"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/agree"
                android:textColor="@color/light_blue" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>